--- a/package.json
+++ b/package.json
@@ -11,12 +11,20 @@
   "author": "jinzhan",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.4.4",
     "@babel/core": "^7.7.4",
     "@babel/node": "^7.7.4",
-    "@babel/plugin-transform-modules-commonjs": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
+    "@babel/preset-env": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-transform-modules-commonjs": "^7.7.4",
     "@babel/plugin-transform-new-target": "^7.7.4",
-    "cross-env": "^6.0.3"
+    "babel-plugin-add-module-exports": "^1.0.2",
+    "babel-preset-minify": "^0.5.0",
+    "coveralls": "^2.11.9",
+    "eslint": "^2.7.0",
+    "expect": "^1.20.1",
+    "mocha": "^2.4.5",
+    "cross-env": "^6.0.3",
+    "jest": "^25.1.0"
   }
 }
