--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development BABEL_ENV=NODE babel-node ./index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "compile": "rm -rf dist && babel src -d dist"
   },
   "keywords": [],
   "author": "jinzhan",
@@ -23,7 +24,7 @@
     "babel-preset-minify": "^0.5.0",
     "coveralls": "^2.11.9",
     "cross-env": "^6.0.3",
-    "eslint": "^2.7.0",
+    "eslint": "^6.8.0",
     "expect": "^1.20.1",
     "jest": "^25.1.0",
     "mocha": "^2.4.5"
